# mq-websocket

./: CHANGELOG.md  README.md  config.json  mq-websocket.cabal  stack.yaml
app/: Tester.hs  WebSocket.hs
docker/: Dockerfile
src/System/MQ/: WebSocket.hs  Websocket.hs
src/System/MQ/WebSocket/: Connection.hs  FromMQ.hs  FromWS.hs  Protocol.hs
src/System/MQ/WebSocket/Atomic/: Functions.hs  Types.hs
src/System/MQ/WebSocket/Connection/: Functions.hs  Types.hs
src/System/MQ/WebSocket/Protocol/: Instances.hs  Types.hs
src/System/MQ/Websocket/: FromWS.hs
src/System/MQ/Websocket/Atomic/: Functions.hs  Types.hs
test/: calculator.json
