name:                mq-websocket
version:             0.1.2.1
synopsis:            Package with monique websocket component
description:
  The package covers:
  .
    * websocket component
homepage:            https://github.com/biocad/mq-websocket
license:             BSD3
license-file:        LICENSE
author:              Bogdan Neterebskii, Vladimir Morozov, Alexander Sadovnikov
maintainer:          neterebskiy@biocad.ru
copyright:           (c) 2018, BIOCAD
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.MQ.WebSocket
                     , System.MQ.WebSocket.Protocol
  other-modules:       
                       System.MQ.WebSocket.Protocol.Types
                     , System.MQ.WebSocket.Protocol.Instances
                       
                     , System.MQ.WebSocket.Connection
                     , System.MQ.WebSocket.Connection.Types
                     , System.MQ.WebSocket.Connection.Functions

                     , System.MQ.WebSocket.FromMQ
                     , System.MQ.WebSocket.FromWS
                     
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-picker
                     , bcd-config
                     , bytestring
                     , clock
                     , containers
                     , cookie
                     , data-msgpack
                     , data-msgpack-types
                     , hslogger
                     , mq
                     , mq-component-hs
                     , mtl
                     , stm
                     , text
                     , websockets
  ghc-options:         -Wall -O2
  default-language:    Haskell2010


executable mq-websocket
  hs-source-dirs:      app
  main-is:             WebSocket.hs
  build-depends:       base
                     , mq-component-hs
                     , mq-websocket
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2

executable tester
  hs-source-dirs:      app
  main-is:             Tester.hs
  build-depends:       base
                     , aeson
                     , aeson-picker
                     , bcd-config
                     , bytestring
                     , case-insensitive
                     , data-msgpack
                     , mq
                     , mq-component-hs
                     , mq-websocket
                     , network
                     , text
                     , websockets
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2

source-repository head
  type:     git
  location: https://github.com/biocad/mq-websocket
